--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -3,7 +3,7 @@ kind: Component
 metadata:
   name: ventos
   annotations:
-    github.com/project-slug: punitcse/ventos
+    github.com/project-slug: "punitcse/ventos"
 spec:
   type: other
   lifecycle: unknown
