--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -5,5 +5,6 @@ metadata:
   annotations:
     github.com/project-slug: "punitcse/ventos"
 spec:
+  owner: punitcse
   type: other
   lifecycle: unknown
